--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>pdc.js</title>
         <link rel="stylesheet" href="styles/main.css"/>
+        <link rel="stylesheet" href="styles/balloon.css"/>
         <script src="src/pdc.js" charset="utf-8"></script>
         <script src="src/main.js" charset="utf-8"></script>
         <script src="src/editor.js" charset="utf-8"></script>
