--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>pdc.js</title>
+        <link rel="icon" href="pdc-js.png">
+        <link rel="apple-touch-icon" sizes="256x256" href="pdc-js.png">
         <link rel="stylesheet" href="styles/main.css"/>
         <link rel="stylesheet" href="styles/balloon.css"/>
         <script src="src/pdc.js" charset="utf-8"></script>
