SVG Importing with with path elements only

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link rel="apple-touch-icon" sizes="256x256" href="pdc-js.png">
         <link rel="stylesheet" href="styles/main.css"/>
         <link rel="stylesheet" href="styles/balloon.css"/>
+        <script src="https://cdn.jsdelivr.net/gh/jarek-foksa/path-data-polyfill@master/path-data-polyfill.js" charset="utf-8"></script>
         <script src="src/pdc.js" charset="utf-8"></script>
+        <script src="src/svgparser.js" charset="utf-8"></script>
         <script src="src/main.js" charset="utf-8"></script>
         <script src="src/editor.js" charset="utf-8"></script>
         <script src="src/picker.js" charset="utf-8"></script>
